--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   max-width: 1280px;
   margin: 0 auto;
   text-align: center;
+  padding-top: 2rem;
   display: flex;
   flex-direction: column;
   align-items: center;
